# agent-second-brain

./: .env.example  README.md  mcp-config.json  pyproject.toml
deploy/: d-brain-bot.service  d-brain-process.service  d-brain-process.timer  d-brain-weekly.service  d-brain-weekly.timer
src/d_brain/: __init__.py  __main__.py  config.py
src/d_brain/bot/: formatters.py  keyboards.py  main.py  states.py
src/d_brain/bot/handlers/: __init__.py  buttons.py  commands.py  do.py  forward.py  photo.py  process.py  text.py  voice.py  weekly.py
src/d_brain/services/: git.py  processor.py  storage.py  transcription.py
vault/.claude/: CLAUDE.md
vault/.claude-plugin/: plugin.json
vault/.claude/agents/: goal-aligner.md  inbox-processor.md  note-organizer.md  weekly-digest.md
vault/.claude/rules/: daily-format.md  goals-format.md  telegram-report.md  thoughts-format.md
vault/.claude/skills/dbrain-processor/: SKILL.md
vault/.claude/skills/dbrain-processor/references/: about.md  classification.md  goals.md  links.md  report-template.md  rules.md  todoist.md
vault/.claude/skills/todoist-ai/: SKILL.md
vault/goals/: 1-yearly-2025.md  3-weekly.md
